ASSETS/CSS: init.css - footer mobile text alignment fixed

--- a/assets/css/init.css
+++ b/assets/css/init.css
@@ -905,11 +905,20 @@ footer {
   }
 
   /*Footer */
+  footer {
+    height: auto !important;
+  }
   .footer__mail {
     text-align: center;
   }
 
   .footer__social ul {
     flex-direction: column;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .footer__copyright {
+    text-align: center;
   }
 }
